<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_subject"
            android:shadowRadius="@integer/config_navAnimTime"
            style="@style/txt"
            android:padding="5dp"/>

        <AutoCompleteTextView
            android:id="@+id/subjects_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_subject"
            android:elevation="10dp"
            android:padding="10dp"
            style="@style/textEditor"/>
    </LinearLayout>

    <EditText
        android:id="@+id/prescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="prescription"
        android:inputType="text"
        android:hint="@string/prescription"
        android:paddingBottom="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginBottom="@dimen/activity_margin"
        android:padding="10dp"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/select_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:elevation="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/choose_from_gallery"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:elevation="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/btn_take_picture"
                android:textColor="@android:color/white" />
        </GridLayout>

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:contentDescription="@string/captured_image" />
    </LinearLayout>

    <Button
        android:id="@+id/save_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:elevation="15dp"
        android:visibility="gone"
        android:background="@color/colorPrimary"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:onClick="upload_file"/>

    <Button
        android:id="@+id/create_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:elevation="10dp"
        android:text="@string/choose_from_gallery"/>

</androidx.appcompat.widget.LinearLayoutCompat>