<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/app_name"
            style="@style/headerText"
            android:gravity="center"/>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/colorAccent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todays_notes"
            style="@style/normalText"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes_recyclerview"
            android:scrollbars="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="3dp"/>

        <LinearLayout
            android:id="@+id/no_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:padding="10dp"
            android:background="@color/colorAccent"
            android:elevation="20dp">
            <TextView
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/no_notes_for_today"
                android:layout_weight="1"
                style="@style/normalText"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_note"
                style="@style/button"
                android:id="@+id/add_new_note"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>